# frappe-active-users

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
active_users/: __init__.py  hooks.py  modules.txt  version.py
active_users/active_users/: __init__.py
active_users/active_users/doctype/active_users_has_role/: active_users_has_role.json  active_users_has_role.py
active_users/active_users/doctype/active_users_has_user/: active_users_has_user.json  active_users_has_user.py
active_users/active_users/doctype/active_users_has_user_type/: __init__.py  active_users_has_user_type.json  active_users_has_user_type.py
active_users/active_users/doctype/active_users_notification_receiver/: active_users_notification_receiver.json  active_users_notification_receiver.py
active_users/active_users/doctype/active_users_settings/: __init__.py  active_users_settings.js  active_users_settings.json  active_users_settings.py  test_active_users_settings.py
active_users/api/: handler.py
active_users/config/: __init__.py  desktop.py  docs.py
active_users/public/: build.json
active_users/public/css/: active_users.bundle.css
active_users/public/js/: active_users.bundle.js
active_users/setup/: install.py  migrate.py  setup.py
active_users/utils/: __init__.py  access.py  api.py  common.py  update.py
